--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body onload="loadData()">
 
     <!-- Client-->
-    <div class="container vh-100">
+    <div class="container container-custom">
         <form id="itemForm">
 
             <div class="row">
@@ -29,7 +29,7 @@
             </div>
 
             <div class="row">
-                <div class="col-8 form-group">
+                <div class="col-lg-8 col-md-7 col-sm-8 form-group">
                     <div>
                         <label for="">Artigo:</label>
                     </div>
@@ -57,8 +57,8 @@
                         <select name="" id="extra" class="form-control"></select>
                     </div>
                 </div>
-                <div class="col-4 form-group">
-                    <button class="btn btn-primary btn-lg w-100 h-100 p-5" id="addProduct" type="button"
+                <div class="col-lg-4 col-md-5 col-sm-4 form-group">
+                    <button class="btn btn-primary h-100  w-100" id="addProduct" type="button"
                         onclick="add()">Adicionar Produto</button>
                 </div>
             </div>
@@ -81,28 +81,31 @@
             <div class="alert alert-danger d-none" id="warningNoItems" role="alert">
                 É necessário inserir 1 item antes de finalizar pedido!
             </div>
-            <button class="btn btn-primary btn-block btn-lg "  type="button" id="orderBtn">Finalizar pedido</button>
+            <button class="btn btn-success btn-block btn-lg "  type="button" id="orderBtn">Finalizar pedido</button>
 
         </form>
     </div>
 
     <!-- Kitchen -->
-    <div class="container vh-100">
+    <div class="container container-custom">
         <h1>Servico Cozinha
         </h1>
-        <div class="row h-25">
+        <div class="row row-custom justify-content-center">
             
             
-            <div class="col-4">
-                <button class="btn btn-primary h-75 w-100">Todos</button>
+            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+                <label >Todos</label>
+                <p id="allOrders">0</p>
             </div>
 
-            <div class="col-4">
-                <button class="btn btn-primary h-75 w-100">Com extra</button>
+            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+                <label >Com extra</label>
+                <p id="allExtra">0</p>
             </div>
 
-            <div class="col-4">
-                <button class="btn btn-primary h-75 w-100">Sem extra</button>
+            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+                <label >Sem extra</label>
+                <p id="allNormal">0</p>
             </div>
         </div>
         <div class="row">
@@ -131,7 +134,7 @@
         </div>
     </div>
 
-    <div class="container vh-100">
+    <div class="container container-custom">
         <div class="row">
             <h2>Tabela de pedidos activos
             </h2>
