fixed margin with kitchen table

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
         <div class="row row-custom justify-content-center">
             
             
-            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+            <div class="col-3 btn btn-primary  w-100 m-3">
                 <label >Todos</label>
                 <p id="allOrders">0</p>
             </div>
 
-            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+            <div class="col-3 btn btn-primary  w-100 m-3">
                 <label >Com extra</label>
                 <p id="allExtra">0</p>
             </div>
 
-            <div class="col-3 btn btn-primary h-50 w-100 m-3">
+            <div class="col-3 btn btn-primary  w-100 m-3">
                 <label >Sem extra</label>
                 <p id="allNormal">0</p>
             </div>
