fixed button color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>McDonald's Ticket</title>
+    <script src="data.js"></script>
 </head>
 
 <body onload="loadData()">
@@ -132,7 +133,7 @@
 
                 </tbody>
             </table>
-            <button class="btn btn-primary" style="visibility: hidden;" id="kitchenBtn" onclick="orderDone()">Pedido
+            <button class="btn btn-danger" style="visibility: hidden;" id="kitchenBtn" onclick="orderDone()">Pedido
                 tratado</button>
         </div>
     </div>
@@ -181,7 +182,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="data.js"></script>
+   
     <script src="client.js"></script>
     <script src="kitchen.js"></script>
     <script src="filterTable.js"></script>
